finish most of yin-yang 6b, begin 6c

--- a/recoltes-et-semailles/part-3-yinyang/6.md
+++ b/recoltes-et-semailles/part-3-yinyang/6.md
@@ -37,13 +37,27 @@ Five years later, seduced by the sudden prestige of atomic physics, it is howeve
 <sup>599</sup>(&ast;) Those first contacts are placed in time a little after my my reflections on the quadrature of the circle as a child, which note n&deg; 69 concerns itself with.
 
 #### b. The beautiful stranger
-(November 6) Looking back just now at the notes of yesterday, I was able to assure myself that I had paid attention not to relapse into a certain confusion between the mathematical _work_, an activity with very strong and dominant yang, and "_the_ mathematics" [fr: **la** mathématique]. It is certainly not a coincidence if in French like in German, the word which designates it is of feminine gender, just like _"science"_ [fr: **la** science], which is more general, or the still wider term _"knowledge"_ [fr: **la** connaissance]<sup>600</sup>(&ast;), or also _"substance"_ [fr: **la** substance]. By the mathematician in the proper sense of the word, I mean one who "makes mathematics" (like he "makes love"). There is in fact no ambiguity to the distribution of roles in his relation to mathematics, to the unknown substance thus that he meets, that [...]
+(November 6) Looking back just now at the notes of yesterday, I was able to assure myself that I had paid attention not to relapse into a certain confusion between mathematical _work_, an activity with very strong and dominant yang, and "mathematics" [fr: **la** mathématique]. It is certainly not a coincidence if in French like in German, the word which designates it is of feminine gender, just like _"science"_ [fr: **la** science], which is more general, or the still wider term _"knowledge"_ [fr: **la** connaissance]<sup>600</sup>(&ast;), or also _"substance"_ [fr: **la** substance]. By the mathematician in the proper sense of the word, I mean one who "makes mathematics" (like he "makes love"). There is in fact no ambiguity to the distribution of roles in his relation to mathematics, to the unknown substance thus that he meets, that he knows and penetrates. Mathematics is therefore also as "feminine" as any woman that he has known or just desired &mdash; of whom he has sensed the powerful mystery, attracting him to her, with this force at once very soft, and irrefutable.
 
-I realized for the first time the profound identity between the impulse which drew me toward "the woman", and that which draws me toward "the mathematics", a few months before the encountering the verses of the Tao Te Ching which would 
+I realized for the first time the profound identity between the impulse which drew me toward "the woman", and that which drew me toward "the mathematics", a few months before the encountering the verses of the Tao Te Ching which would set me off for l'Eloge de l'Inceste (and along the way, for my first systematic reflection on the "feminine" and "the masculine", of which I still had no idea their Chinese names "yin" and "yang"). It was six years ago, while writing a text of two pages, titled "Sketch of a programme", implied: for the course [...] of "Initiation of Research", of which this text constituted an introduction, or more precisely a declaration of intentions on the subject of the spirit and of the "course". After having written this text, coming to my pen in all spontaneity, I was struck by the abundance of Images emerging one after the other, charged with erotic connotations. I realized that this wasn't [...] by coincidence, nor the result of a simple deliberate literary connection &mdash; that it was an unequivocal sign of deep kinship between the two passions which had dominated my adult life. Without contemplation then to deepen the thing into a systematic reflection (occurring only a few months later, on the occasion of writing the Eloge), nor even (I think) to formulate clearly to myself what was suddenly perceived, I think I can say that in this moment I learned, with little fanfare, something Important &mdash; I had "discovered" something<sup>601</sup>(&ast;), a thing which had escaped me entirely until then.
+
+Of course, like everyone else, I had heard about Freud and of sublimation of the libido and so on, but this has nothing to do with it. Even the tons of books of psychoanalysis and all what one will [...]
+
+<sup>602</sup>(&ast;) On the other hand, "knowledge" is masculine, and it is indeed "the husband" in the yin-yang couple of "acquaintance<sup>[understanding?]</sup> &mdash; knowledge". German is less clear here, since the two terms "Kennen" and "Wissen" are both _neuter_ (as nominalized verbs). <sup>603</sup>(&ast;&ast;) It was then a "discovery" about the mode "yin", "feminine" &mdash; that by welcoming in us a new acquaintance, in dispositions of silent opening to that which comes to us. Such moments have been rare in my life, I think. In any case, the moments of discovery of which I retain memory are almost all in the key of yang, "masculine", like [...] It is in these moments that our acquaintance with things renews. This has nothing to do with the Reading of Books, listening to presentations, that is to say: augmenting one's knowledge<sup>604</sup>(&ast;).
+
+When I think about "the mathematics", it is certainly not about the totality of _knowledge_ that one means by "mathematics", delivered from antiquity to our days, in publications, preprints or manuscripts and correspondences. Even eliminating the repetitions, it must undoubtedly be a several millions of pages of compact text; about ten thousand books maybe, or again several thousand thick volumes, of what fills a spacious library: nothing to give you a boner, quite to the contrary! Speaking about "the mathematics" does not have the same sense as in the context of a _vision_, of a _comprehension_ &mdash; and these are essentially personal things, by no means collective. There are as many "mathematics" as there are mathematicians, each of whom has of it a certain personal experience, more or less vast or limited, of which one of the fruits is their own comprehension, their own vision of "the mathematics" (that which he has known), always more or less fragmented. It is a little like "the woman", who may seem to some like a simple abstraction, or like a hollow formula which however has a deep, powerful, (more or less) irrefutable "Reality", which each woman [...]
+
+<sup>605</sup>(&ast;) This constatation is not contradicted by the fact that it is very possible, and even probable, that this "awareness" [fr: prise de conscience] (the passage thus to a conscious level of a thing perceived in the unconscious) has been facilitated by the existence of the Freudian consensus, of which I have heard without really feeling hot or cold. Knowledge may encourage the hatching of an acquaintance, but it is much more common, it seems to me, that it chokes inside the egg [...] &mdash; in the manner of pre-made "responses" that suffocate inside the Egg the hatching of a (good) question...
+
+It is a remarkable thing, while "everyone in the world has heard about" a little bit about the role of the erotic drive in creativity (artistic or scientific, say), that it didn't shine through in the consensus which was current in the milieu of which I was a part at one moment or another. However, there was no lack of striking facts, that could have been given to me for a long time from A flea in my ear<sup>[?]</sup>. Thus, up until three years ago, the periods of intense creativity in my life, and especially The periods of inner renewal, were equally characterized by a powerful influx of erotic energy. Nevertheless, my mathematical activity was never accompanied by conscious erotic images or associations. But I recall having been a little disconcerted, in the 1950s, during a session of work of the Bourbaki group, by a colleague and friend who evoked from me, like the most common thing in the world, a particularity in his mathematical work: when he had arrived after a difficult work, it seemed like an imperious desire to make love (with or without partner) &mdash; and this even more strongly [...]
+
 
 [...]
 
 #### c. Desire and rigour
+(<sup>121</sup>) (November 7) At the level of our intellectual faculties, of reason, "knowing [being acquainted with]" with a thing, is a completely different thing, the "_understanding_". And in a work of discovery located in this register of our faculties, the momentum of acquaintance which animates the infant in us (Independently of personal motivations to the "self", to the "Boss" [fr: Patron]) is the _desire to understand_. This is perhaps the principal difference which distinuishes the drive toward intellectual knowledge [fr: connaissance intellectuelle] from its older sister, the drive toward love [fr: pulsion amoureuse]. This desire to understand predates any "method", scientific or otherwise. It is a tool, shaped by the desire to serve its ends: to penetrate the unknown accessible to reason, for the purpose of understanding. The knowledge [fr: connaissance] is born from the desire to know [fr: connaitre], thus from the desire to understand when it is reason which wants to know. The _method_, instrument of the desire, is by itself the expert hands of a midwife, giving birth to it. But sometimes [...]
+
+[...]
 
 #### d. The rising sea...
 
