--- a/recoltes-et-semailles/part-1/7.md
+++ b/recoltes-et-semailles/part-1/7.md
@@ -1,18 +1,18 @@
 ### 7. The legacy of Galois
-It would seem that among all the natural sciences, it isn't only in mathematics that this which I have called "the dream", or "the waking dream", is struck down like something seemingly absolutely forbidden, if more than two times per millennium. In the other sciences, including the sciences reputed as "exact" such as physics, the dream is at least tolerated, seen encouragingly (depending on the period), by name it is more "proper" [fr: sortables] as: "speculations", "hypotheses" (such as the famous "atomic hypothesis", issued by a dream, if we neglect a speculation by Democritus), "theories"... The passage from a status of dream-whose-name-we-dare-not-say to that of "scientific truth" is done by insensible degrees, by a consensus that grows progressively. In mathematics on the other hand, it's almost always (nowadays at least) about a sudden transformation, by virtue of the waving of a magic wand of _proof_ [fr: demonstration] (<sup>4</sup>). In times when the notion of mathematical definition and of proof didn't exist, like they do today, clear and the object of a (more or less) general consensus, there were however visibly important notions that had an ambiguous existence &mdash; like that of "negative" number (rejected by Pascal) or that of "imaginary" number. This ambiguity reflects itself in the language still in use today.
+It would seem that among all the natural sciences, it is only in mathematics that what I have called "the dream", or "the waking dream", is struck down like something seemingly absolutely forbidden, more than two times per millennium. In the other sciences, including the sciences reputed as "exact" such as physics, the dream is at least tolerated, even encouraged (depending on the period), under more "respectable" names like: "speculations", "hypotheses" (such as the famous "atomic hypothesis", issued by a dream, if we neglect a speculation by Democritus), "theories"... The passage from the status of dream-whose-name-we-dare-not-say to that of "scientific truth" is done by insensible degrees, by a consensus that grows progressively. In mathematics on the other hand, it's almost always (nowadays at least) about a sudden transformation, by virtue of the waving of a magic wand of _proof_ (<sup>4</sup>). In times when the notion of mathematical definition and of proof didn't exist, like they do today, clear and the object of a (more or less) general consensus, there were however visibly important notions that had an ambiguous existence &mdash; like that of "negative" number (rejected by Pascal) or that of "imaginary" number. This ambiguity is reflected in the language still in use today.
 
-The progressive clarification of notions of definition, statement, proof, of mathematical theory, has in this regard been very beneficial. It has made us conscious of all the power of tools, of a childish simplicity however, by which we arrange to formulate with perfect precision even that which may seem informulable &mdash; by the sole virtue of a sufficiently rigorous use of everyday language, more or less. If there is something that has fascinated me in mathematics since my childhood, it is precisely this power to surround with words, and to express in a perfect manner, the essence of those mathematical things which at first sight present themselves in a form so elusive, or so mysterious, that they seem beyond words...
+The progressive clarification of notions of definition, statement, proof, of mathematical theory, has in this regard been very beneficial. It has made us conscious of the full power of tools, of a childish simplicity however, by which we arrange to formulate with perfect precision even that which may seem informulable &mdash; by the sole virtue of a sufficiently rigorous use of everyday language, more or less. If there is one thing that has fascinated me in mathematics since my childhood, it is precisely this power to surround with words, and to express in a perfect manner, the essence of those mathematical things which at first sight present themselves in a form so elusive, or so mysterious, that they seem beyond words...
 
-An annoying psychological aftereffect however of this power, of resources that offer perfect precision and demonstration, is that they have accentuated again the traditional taboo regarding the "mathematical dream"; that is to say regarding all that which doesn't present itself by conventional standards of precision ([...] at the expense of a vaster vision), guaranteed to be "dyed in the wool" [fr: bon teint] by formal proof, or if not (and more and more by the passing of time...) by sketches of proof, supposed able to be formalized. Occasional _conjectures_ are tolerated as rigorous, provided that they satisfy a of conditions of precision of a questionnaire, where the only allowed answers are "yes" or "no". (And as a further condition, one must add, [...].) To my knowledge, there has been no example of a development, called "experimental", of a mathematical theory which was explicitly conjectural in its essential parts. It is true that following the modern canons, the whole calculus of the "infinitely small" developed at the end of the 17th century, which later became the differential and integal calculus, would take the face of a waking dream, which would finally be transformed into serious mathematics only two centuries later, by Cauchy's waving of the magic wand. And this brings me forcefully back to the memory of the waking dream of _Evariste Galois_, who was not so lucky with the same Cauchy; but less than a hundred years sufficed this time for another waving of the wand, of Jordan this time (if I remember correctly), giving the right to cite this dream, rebaptised for the circumstances as "Galois theory".
+An annoying psychological aftereffect of this power however, of resources that offer perfect precision and demonstration, is that they have accentuated again the traditional taboo regarding the "mathematical dream"; that is to say regarding all that which doesn't present itself by conventional standards of precision (which would come at the expense of a vaster vision), guaranteed to be "dyed in the wool" [fr: bon teint] by formal proof, or else (what is becoming more and more common by the passing of time...) by sketches of proof, supposed able to be formalized. Occasional _conjectures_ are tolerated as rigorous, provided that they satisfy the conditions of precision of a questionnaire, where the only allowed answers are "yes" or "no". (And as a further condition, need it be said, that whoever allows himself this must be well established in the mathematical world.) To my knowledge, there has been no example of a development, called "experimental", of a mathematical theory which was explicitly conjectural in its essential parts. It is true that following the modern canons, the whole calculus of the "infinitely small" developed at the end of the 17th century, which later became the differential and integal calculus, would be seen as a waking dream, which would finally be transformed into serious mathematics only two centuries later, by Cauchy's waving of the magic wand. And this brings me forcefully back to the memory of _Evariste Galois_'s waking dream, which was not so lucky with the same Cauchy; but less than a hundred years sufficed this time for another waving of the wand, of Jordan this time (if I remember correctly), giving the right to cite this dream, rebaptised for the circumstances as "Galois theory".
 
-The remark which draws itself out from all of this, and which is not to the advantage of "mathematics in 1984", is that it is fortunate that people like Newton, Leibniz, Galois (and I have surely passed over many, not being knowledgeable in history...) were not burdened by our current canon, in a time when they contented themselves to discover without taking the leisure to canonize!
+The remark which emerges from all this, and which is not to the advantage of "mathematics in 1984", is that it is fortunate that people like Newton, Leibniz, Galois (and I have surely passed over many, not being knowledgeable in history...) were not burdened by our current canon, in a time when they contented themselves to discover without taking the leisure to canonize!
 
-The example of Galois, come here without my calling for it, touches in me a sensitive chord. I seem to remember that a sentiment of brotherly sympathy in his regard awakened since the first time when I heard talk about him and his strange destiny, at a time when I was still a student at a lycée or university, I believe. Like him, I sensed in me a passion for mathematics &mdash; and like him I felt like a misfit, a stranger in the "high society" which (it seemed to me) he had rejected. I ended up myself however being part of this high society, to quit it one day, without regrets... This a little forgotten affinity reappeared only recently and during an entirely new day, as I was writing "Sketch of a Programme" (at the occasion of my demand for admission as a researcher at the Centre National de la Recherche Scientifique). The report is dedicated principally to a sketch of my principal themes of reflection since about 10 years. Of all the themes, the one which fascinates me the most, and which I intend to develop above all in the upcoming years, is of the same type as a mathematical dream, which moreover joins up with the "dream of motives", for which it provides a new approach. While writing this Sketch, I remembered the longest mathematical reflection that I have pursued in one go in these last fourteen years. It was pursued from January until June in 1981, and I named it "The Long March through Galois theory". Progressively, I became aware that the daydream which I pursued sporadically since some years, which ended up taking the name of "anabelian algebraic geometry", was not other than a continuation, "an ultimate conclusion of Galois theory, and doubtlessly in the spirit of Galois".
+The example of Galois, having come here without my calling for it, touches in me a sensitive chord. I seem to remember a sentiment of brotherly sympathy in his regard awake since the first time when I heard about him and his strange destiny, at a time when I was still a student at a lycée or university, I think. Like him, I sensed in me a passion for mathematics &mdash; and like him I felt like a misfit, a stranger in the "high society" which (it seemed to me) had rejected him. I ended up myself however being part of this high society, to quit it one day, without regrets... This a little forgotten affinity reappeared only recently and on an entirely new day, as I was writing the "Sketch of a Programme" (at the occasion of my demand for admission as a researcher at the Centre National de la Recherche Scientifique). The report is mainly dedicated to a sketch of my principal themes of reflection since about 10 years. Of all the themes, the one which fascinates me the most, and which I intend to develop above all in the upcoming years, is of the same type as a mathematical dream, which moreover joins up with the "dream of motives", for which it provides a new approach. While writing this Sketch, I remembered the longest mathematical reflection that I have pursued in one go in these last fourteen years. It was pursued from January until June in 1981, and I named it "The long March through Galois theory". Progressively, I became aware that the daydream which I had pursued sporadically since some years back, which ended up taking the name of "anabelian algebraic geometry", was nothing else than a continuation, "an ultimate conclusion of Galois theory, and doubtlessly in the spirit of Galois".
 
-When this continuity appeared to me, at the moment of writing the passage out of which the cited line was extracted, a joy went through me, which has not dissipated. It was one of the rewards of a work pursued in complete solitude. Its appearance was as unexpected as the more than fresh welcome received recently from two or three colleagues and old friends who were nevertheless "in the loop", of which one had moreover been my student, to whom I had the occasion to speak, still "spontaneously" [fr: à chaud] and to the joy of my heart, of those things which I was about to discover...
+When this continuity appeared to me, at the moment of writing the passage out of which the cited line was extracted, a joy went through me, which has not dissipated since. It was one of the rewards of a work pursued in complete solitude. Its appearance was as unexpected as the more than fresh welcome received recently from two or three colleagues and old friends who were nevertheless still "in the loop", of which one had moreover been my student, to whom [pl] I had the occasion to speak, while it was still "hot" [fr: à chaud] and to the joy of my heart, of those things which I was about to discover...
 
-This reminds me to resume today the legacy of Galois, it is surely also [...] which was his in his time. Maybe time changes less than we think it does, often! This "risk" however doesn't to me take the figure of a threat. If it happens me to be in pain and frustration by the affectation of indifference or of disdain of those who I have loved, never on the other hand since long years of solitude, mathematical or otherwise, did it weigh me down. If it is a loyal friend who I ceaselessly aspire to meet again when I leave her, it is her! <sup>[This paragraph needs some improvement.]</sup>
+This reminds me to resume today the legacy of Galois, while surely also accepting the risk of solitude which was his in his time. Maybe time changes less than we think it does, a lot of the time! This "risk" however doesn't to me take the form of a threat. If sometimes I am hurt and frustrated by the affectation of indifference or of disdain from those who I have loved, never on the other hand since long years of solitude, mathematical or otherwise, did it weigh me down. If it is a loyal friend who I ceaselessly aspire to meet again when I leave her, it is her! <sup>[Last sentence unclear.]</sup>
 
 ---
 
-(<sup>4</sup>) Besides, even nowadays we encounter "demonstrations" of uncertain status. It has been this way during the years of the demonstration of the theorem by Grauert on finitude which bears his name, that no one (and the ones who tried were not lacking!)<sup>[misinterpreted?]</sup> can read. This perplexity has been resolved by other more transparent demonstrations, and which certainly went further, that took over the initial demonstration. A similar situation, more extreme, is the "solution" to the problem called "4 colors", whose computational part was settled by computer (and by millions of dollars). There it's thus about a "demonstration" which is no longer founded in the intimate conviction coming from comprehension &mdash; about a mathematical situation, but [...]
+(<sup>4</sup>) In fact, even nowadays we encounter "proofs" of uncertain status. It has been like this during the years of the proof of the theorem by Grauert on finitude which bears his name, that no one (and the ones who tried were not lacking!) can read. This perplexity was resolved by other more transparent proofs, and which certainly went further, which replaced the initial proof. A similar, more extreme situation, is the "solution" to the "four colors problem", whose computational part was settled by computer (and by millions of dollars). So it is about a "proof" which is no longer founded in the intimate conviction coming from comprehension of a mathematical situation, but in the credit that one lends to a machine devoid of faculties of comprehension, and in which the computer mathematician ignores the structure and functioning. Even supposing that the calculation has been confirmed by other computers, following other programs of calculation, I nevertheless don't consider the four colors problem to be closed. It has merely changed its face, in the sense that it is no longer a question of searching for a counter-example, but only for a proof (readable, of course!).
