corrections for section 5

--- a/recoltes-et-semailles/part-1/5.md
+++ b/recoltes-et-semailles/part-1/5.md
@@ -7,7 +7,7 @@ While writing this Introduction, I am well aware that this type of reflections c
 
 These advantages on the other hand become entirely illusory for a presentation which is addressed toward children, to young people or to adults who are not completely "in the game" in advance, in whom the interest isn't already awakened, and who furthermore, most of the time, are (and will remain, as a result...) in total ignorance about what is the true approach in a work of discovery. Readers, in other words, who don't know the very _existence_ of such work, _within reach to anyone_ gifted and curious and of common sense &mdash; this work in which our intellectual knowledge of the Universe is born and reborn ceaselessly, including what expresses itself in imposing sequences like Euclid's "Elements", or Darwin's "Origin of Species". The complete ignorance of the existence and of the nature of such a work is an almost universal thing, including among teachers at all levels of education, from the schoolteacher to the university professor. This is an extreordinary fact, which appeared to me in plain sight on the first occasion of reflection that began last year with the first part of this Introduction, at the same time that I glimpsed the deep roots of this confusing fact...
 
-Even though it is targeted to readers who are completely "in the game" on all points of view, it remains however an important thing that the "rigorous" mode of exposition is prohibited from communicating. This is also a thing wholly misconceived in circles of serious people, like [...]! I want to speak about the _dream_. About the dream, and of visions that it breathes on us &mdash; impalpable like the first one, and often reluctant to take form. Long years, even an entire life of intense work may not suffice to see manifest itself this dream vision, watching it condense and polish itself to the hardness and radiance of a diamond. _This_ is our labour, workers by hand or by mind. When the work is achieved, or such a part of the work, we present tangible findings in the most vivid light that we can find, we rejoice, and often we take pride. It is not in this diamond however, that we have carved out at length, that we find that which inspires us to do the carving. Perhaps we have fashioned an instrument of great precision, a powerful tool &mdash; but the tool itself is limited, like every thing made by the hands of the human, even when it seems great to us. A vision, without name and initially without edges, tenuous like a scattering [fr: lambeau] of mist, has guided our hand and we have kept leaning over the work, without feeling the hours go by nor perhaps the years. A scattering which detached itself silently from a bottomless Sea of mist and darkness... This which is limitless in us is Her, this Sea ready to conceive and to give birth ceaselessly, when our thirst [...]. To these nupitals the Dream is deaf, like the embryo nestled in the nourishing mother, awaiting the obscure labours which will lead it toward a second birth, toward the light of day.
+Even though it is targeted to readers who are completely "in the game" on all points of view, it remains however an important thing that the "rigorous" mode of exposition is prohibited from communicating. This is also a thing wholly misconceived in circles of serious people, like [...]! I want to speak about the _dream_. About the dream, and of visions that it breathes on us &mdash; impalpable like the first one, and often reluctant to take form. Long years, even an entire life of intense work may not suffice to see manifest itself this dream vision, watching it condense and polish itself to the hardness and radiance of a diamond. _This_ is our labour, workers by hand or by mind. When the work is achieved, or such a part of the work, we present tangible findings in the most vivid light that we can find, we rejoice, and often we take pride. It is not in this diamond however, that we have carved out at length, that we find that which inspires us to do the carving. Perhaps we have fashioned an instrument of great precision, a powerful tool &mdash; but the tool itself is limited, like every thing made by the hands of the human, even when it seems great to us. A vision, without name and initially without edges, tenuous like a scattering [fr: lambeau] of mist, has guided our hand and we have kept leaning over the work, without feeling the hours go by nor perhaps the years. A scattering which detached itself silently from a bottomless Sea of mist and darkness... What is limitless in us is Her, this Sea ready to conceive and to give birth ceaselessly, when our thirst impregnates Her. To these nupitals the Dream wells up, like the embryo nestled in the nourishing mother, awaiting the obscure labours which will lead it toward a second birth, toward the light of day.
 
 Misfortune to a world where the dream is held in contempt &mdash; this is also a world where that which is deep in us is despised. I don't know if other cultures before ours &mdash; the one of the television, computers and transcontinental rockets &mdash; professed the same contempt. It must be one of the numerous points by which we distinguish ourselves from our predecessors, that we have so radically supplanted, eliminated needless to say from the surface of the planet. I don't know any other culture, where the dream is not respected, where its deep roots aren't perceived by all and recognized. And where [...] in the life of a person or of a people, that wasn't born from the dream and wasn't nourished by the dream, before hatching in the open? With us however (should we already say: everywhere?) the respect for the dream is called "superstition", and it is well known that our phychologists and phychiatrists have taken [...]. It is also true that more people "with us" don't know how to light a fire, nor dare even give birth to their child in their own house, or [...] &mdash; there are clinics and hospitals for that, thank God... Our world, if proud of its power in atomic megatonnes and in stored quantities of information in the libraries and in the computers, is no doubt also the one where everyone's _impotence_, this fear and contempt in front of simple and essential things of life, has culminated.
 
