--- a/recoltes-et-semailles/part-1/9.md
+++ b/recoltes-et-semailles/part-1/9.md
@@ -1,8 +1,10 @@
 ### 9. The welcome foreigner
-The moment seems to have come for me to express my thoughts on the subject of my relation to the world of mathematicians. This is a very different thing than my relation to mathematics. It has existed and has been strong since my early years, even long before doubting that there existed a world and a community of mathematicians. A whole complex world, with its learned societies, its periodicals, its meetings, conferences, congresses, its prima donnas and its drudges, its power structure, its gray eminences, and the mass not less gray of commoners and exploitables, in need of a thesis or articles and also of those, more rare, who are rich in capacities and ideas and crash onto locked doors, desperate to find the support of one of the powerful men, pressed and frightened that have this magical power: publish an article...
+The moment seems to have come for me to express my thoughts on the subject of my relation to the world of mathematicians. This is a wholly different thing than my relation to mathematics. It has existed and has been strong since my early years, even long before doubting that there existed a world and a community of mathematicians. A whole complex world, with its learned societies, its periodicals, its meetings, conferences, congresses, its prima donnas and its drudges, its power structure, its gray eminences, and the mass not less gray of commoners and exploitables, in need of a thesis or articles and also of those, more rare, who are rich in capacities and ideas and crash onto locked doors, desperate to find the support of one of the powerful men, pressed and frightened who have this magical power: publish an article...
 
-I discovered the existence of a mathematical world when arriving in Paris in 1948, at the age of 21, with a License ès Sciences from Montpellier university in my thin suitcase, and a manuscript of tight lines, written double-sided, without margins (paper was expensive!), representing three years of solitary reflections on that which (I learned later) was already well known by the name of "measure theory" or "the Lebesgue integral". For lack of having ever met any others, I thought, until the day when I arrived in the capital, that I was alone in the world to "do maths", the only _mathematician_ therefore. (This was for me the same thing, and it has kind of stayed with me to this day.) I juggled with sets that I called measurable (without having encountered for that matter a set that isn't...) and with almost-everywhere convergence, but ignoring that it is a topological space. I remained a little lost in a dozen non-equivalent notions of "abstract space" and of compactness, fished in a small booklet (by someone known as Appert I think, in the Actualités Scientifiques et Industrielles), on which I stumbled God-knows-how. I had still not heard pronounced, in a mathematical context at least, strange or barbaric words like group, field [fr: corps], ring, module, complex, homology (and I could go on!), that suddenly, without warning, surged over me all at the same time. The shock was harsh!
+I discovered the existence of a mathematical world when arriving in Paris in 1948, at the age of 20, with a License ès Sciences from Montpellier University in my thin suitcase, and a manuscript of tight lines, written double-sided, without margins (paper was expensive!), representing three years of solitary reflections on that which (I learned later) was already well known by the name of "measure theory" or "the Lebesgue integral". For lack of having ever met any others, I thought, until the day when I arrived in the capital, that I was alone in the world to "do maths", the only _mathematician_ therefore. (This was for me the same thing, and it has kind of stayed with me to this day.) I juggled with sets that I called measurable (without having encountered for that matter a set that isn't...) and with almost-everywhere convergence, but ignoring that it is a topological space. I remained a little lost in a dozen non-equivalent notions of "abstract space" and of compactness, fished from a small booklet (by someone known as Appert I think, in the Actualités Scientifiques et Industrielles), on which I stumbled God-knows-how. I had still not heard pronounced, in a mathematical context at least, strange or barbaric words like group, field [fr: corps], ring, module, complex, homology (and I could go on!), that suddenly, without warning, surged over me all at the same time. The shock was harsh!
 
-If I "survived" this shock, and continued to do maths and to even make it my profession, it was only early days, the mathematical world still hardly resembled what it became since. It is also possible that I had the chance to land in a corner more welcoming than any other in this unsuspected world. I had a vague recommendation from one of my professors at the faculty of Montpellier, Mr. Soula (no more often than his colleagues had he seen me in his course!), who had been a student of Cartan (father or son, I couldn't say anymore). As Elie Cartan was then already "out of the picture" [fr: hors jeu], his son Henri Cartan was the first "peer" [fr: congénère] who I would have the honor to meet. I didn't doubt then that it was a good omen! I was welcomed by him with this courteous impression of benevolence which distinguishes him, [...]
+If I "survived" this shock, and continued to do maths and to even make it my profession, it was only early days, the mathematical world still hardly resembled what it became since. It is also possible that I had the chance to land in a corner more welcoming than any other in this unsuspected world. I had a vague recommendation from one of my professors at the faculty of Montpellier, Mr. Soula (not more often than his colleagues had he seen me in his course!), who had been a student of Cartan (father or son, I couldn't say anymore). As Elie Cartan was then already "out of the game", his son Henri Cartan was the first "peer" who I would have the honor to meet. I didn't doubt then that it was a good omen! I was welcomed by him with this courteous impression of benevolence which distinguishes him, well known to the generations of normaliens who have had the chance to take their first steps with him. [...] Be it as it may, his benevolence clearly adressed itself to the person, not to baggage or to potential gifts, nor (later) to reputation or to notoriety...
+
+In the years that followed, I was a host [guest?] in a course of Cartan's at the "Ecole" (on the differential formalism for varieties), which I was clinging to firmly; as well as the "Séminaire Cartan", as an astounded witness to discussions between him and Serre, with great blows of "Spectral Sequences" (brr!) [?] and of drawings (called "diagrams") full of arrows covering the whole board. This was the heroic epoch of the theory of "sheaves", "carapaces" [?] and of a whole arsenal on whose meaning I was lost completely, although I forced myself somehow to swallow definitions and statements and to verify the proofs. At the Séminaire Cartan there were also periodical appearances of Chevalley, Weil, and the days of Séminaires Bourbaki (bringing together a small twenty or thirty at the most, participants and listeners), one would see barging in, this a little noisy group of buddies, other members of the famous Bourbaki gang: Dieudonné, Schwarz, Godement, Delsarte. They thoued each other, speaking the same language that escaped me practically completely, smoked a lot and laughed gladly, the only thing missing was the cases of beer to complete the atmosphere &mdash; this was replaced by the chalk and the board. An atmosphere very different from that in the course of Leray at the Collège du France (on the theory of Schauder on the topological degree [?] in spaces of infinite dimension, poor me!), that I had listened to on Cartan's advice. I had seen Mr. Leray at the Collège de France to ask him (if I remember well) [...]
 
 [...]
