a little more work on section 9

--- a/recoltes-et-semailles/part-1/9.md
+++ b/recoltes-et-semailles/part-1/9.md
@@ -5,6 +5,12 @@ I discovered the existence of a mathematical world when arriving in Paris in 194
 
 If I "survived" this shock, and continued to do maths and to even make it my profession, it was only early days, the mathematical world still hardly resembled what it became since. It is also possible that I had the chance to land in a corner more welcoming than any other in this unsuspected world. I had a vague recommendation from one of my professors at the faculty of Montpellier, Mr. Soula (not more often than his colleagues had he seen me in his course!), who had been a student of Cartan (father or son, I couldn't say anymore). As Elie Cartan was then already "out of the game", his son Henri Cartan was the first "peer" who I would have the honor to meet. I didn't doubt then that it was a good omen! I was welcomed by him with this courteous impression of benevolence which distinguishes him, well known to the generations of normaliens who have had the chance to take their first steps with him. [...] Be it as it may, his benevolence clearly adressed itself to the person, not to baggage or to potential gifts, nor (later) to reputation or to notoriety...
 
-In the years that followed, I was a host [guest?] in a course of Cartan's at the "Ecole" (on the differential formalism for varieties), which I was clinging to firmly; as well as the "Séminaire Cartan", as an astounded witness to discussions between him and Serre, with great blows of "Spectral Sequences" (brr!) [?] and of drawings (called "diagrams") full of arrows covering the whole board. This was the heroic epoch of the theory of "sheaves", "carapaces" [?] and of a whole arsenal on whose meaning I was lost completely, although I forced myself somehow to swallow definitions and statements and to verify the proofs. At the Séminaire Cartan there were also periodical appearances of Chevalley, Weil, and the days of Séminaires Bourbaki (bringing together a small twenty or thirty at the most, participants and listeners), one would see barging in, this a little noisy group of buddies, other members of the famous Bourbaki gang: Dieudonné, Schwarz, Godement, Delsarte. They thoued each other, speaking the same language that escaped me practically completely, smoked a lot and laughed gladly, the only thing missing was the cases of beer to complete the atmosphere &mdash; this was replaced by the chalk and the board. An atmosphere very different from that in the course of Leray at the Collège du France (on the theory of Schauder on the topological degree [?] in spaces of infinite dimension, poor me!), that I had listened to on Cartan's advice. I had seen Mr. Leray at the Collège de France to ask him (if I remember well) [...]
+In the years that followed, I was a host [guest?] in a course of Cartan's at the "Ecole" (on the differential formalism for varieties), which I was clinging to firmly; as well as the "Séminaire Cartan", as an astounded witness to discussions between him and Serre, with great blows of "Spectral Sequences" (brr!) [?] and of drawings (called "diagrams") full of arrows covering the whole board. This was the heroic epoch of the theory of "sheaves", "carapaces" [?] and of a whole arsenal on whose meaning I was lost completely, although I forced myself somehow to swallow definitions and statements and to verify the proofs. At the Séminaire Cartan there were also periodical appearances of Chevalley, Weil, and the days of Séminaires Bourbaki (bringing together a small twenty or thirty at the most, participants and listeners), one would see barging in, this a little noisy group of buddies, other members of the famous Bourbaki gang: Dieudonné, Schwarz, Godement, Delsarte. They thoued each other, speaking the same language that escaped me practically completely, smoked a lot and laughed gladly, the only thing missing was the cases of beer to complete the atmosphere &mdash; this was replaced by the chalk and the board. An atmosphere very different from that in the course of Leray at the Collège de France (on the theory of Schauder on the topological degree [?] in spaces of infinite dimension, poor me!), that I had listened to on Cartan's advice. I had seen Mr. Leray at the Collège de France to ask him (if I remember well) [...]
 
-[...]
+The strange thing is that in this world where I had newly arrived and if which I hardly understood the language and the things they were talking about even less, I didn't feel like a stranger. While I hardly had the occasion to talk (and with good reason!) with one of these joyous frenchmen like Weil or Dieudonné, or with one of these [...] very distinguished Gentlemen like Cartan, Leray, or Chevalley, I felt _accepted_, I would almost say: _one of them_. I don't remember a single occasion when I was treated with condescendence by one of these men, nor an occasion when my thirst for knowledge, and later, my joy for discovery, was found rejected through complacency or disdain (<sup>5</sup>). If [...], I wouldn't have "become a mathematician" as one says &mdash; I would have chosen a different profession, where I could give my all [?] without having to confront the conctempt...
+
+Although "objectively" I was a stranger to this world, just like I was a stranger in France, still a link united me to these people from a different milieu, a different culture, a different destiny: a shared passion. I doubt that this crucial year when I discovered the world of mathematicians, none of them, not even Cartan [...], perceived in me this same passion which resided in them. For them, I had to be one among a mass of listeners of the course and the seminar, taking ntoes and visibly not well involved in the game. If perhaps I distinguished myself in some way from other listeners, it was that I was not afraid to ask questions, that most of the time had to indicate above all my phenomenal ignorance of the language as well as of mathematical things. The answers could be short, even surprised, never the amazed oddball [?] that [...], nor in the no-fuss environment of the Bourbaki group, nor in the more austere setting of the course of Leray at the Collège de France. In these years, since arriving in Paris with a letter for Elie Cartan in my pocket, I never got the impression of finding myself facing a clan, a closed world, or even hostile. If I had known, [...] The respect for the individual made part of the air that I breathed. [...]
+
+----
+
+(<sup>5</sup>) This fact is [...] more remarkable that until 1957, I was considered with a certain reservation by more than one member of the Bourbaki group, who had finally [?] coopted me, with a certain reluctance. [...]
