--- a/recoltes-et-semailles/part-0-letter/10.md
+++ b/recoltes-et-semailles/part-0-letter/10.md
@@ -14,7 +14,7 @@ The same second movement also opens an "episode of illness"<sup>118</sup>(&ast;)
 
 Thus is born the third wave in this vast movement that is Harvests and Sowings &mdash; a long "wave-meditation" on the theme of yin and yang, the "dark" and "bright" hillsides in the dynamics of things and in human existance. As the result of the desire to a more thorough comprehension of deep forces in the work of the Burial, this meditation immediately gained autonomy and an own unity, and carried itself from the beginning toward what's the most universal, as well as toward what's most intimately personal. It is in the course of this meditation that I discovered this thing (evident to tell the truth, as soon as one asks the question), that in my spontaneous approach to the discovery of things, whether they be mathematical or otherwise, the "base tone" is "yin", "feminine"; and also and especially, that in contrast to what happens most of the time, I remained faithful to this original nature in me<sup>120</sup>(&ast;&ast;), without ever influencing or correcting it to conform with dominant values [...] in the surrounding environments. This discovery first appeared to me as a simple curiosity. Only little by little did an essential key reveal itself to me for a comprehention of the Burial. What's more &mdash; and this is a thing which appears to me even more far-reaching &mdash; I see this now very clearly and without the trace of doubt: that if, with by no means exceptional intellectual gifts, I have still been able to give my full extent in my mathematical work, and produce a work and give birth to a vast, powerful and fertile vision, I owe it to nothing but this fidelity, to this absence of all concern with conforming to norms, thanks to which I abandoned myself with total confidence to this drive to original understanding, without sharpening [?] or amputating anything [...].
 
-It is however not the creativity and its sources that find themselves at the center of attention in this meditation "The Burial (2) &mdash; or the Key of Ying and Yang", but it is rather "the conflict", that state of blockage of the creativity, or the dispersion of the creative energy by the confrontation, in the phyche, of opposing forces (most often hidden). The aspects of _violence_, of violence that is (in appearance) "free-of-charge", "for its own sake", have disconcerted me more than once in the Burial, and made a resurgence in a multitude of similar experienced situations. The experience of this violence has been in my life like "hard-core, irreducible, of the experience of conflict". Never before have I confronted myself with the formidable mystery of the very existence and of the universality of this violence in human existence in general, and in mine in particular. It is this mystery which is at the center of attention, throughout the second half  (the side of "yin", or "decline") in the meditation on yin and yang. It is in the course of this part of the meditation that a deeper vision progressively emerged, of the meaning of the Burial, and of forces that it expresses. It is also that part of Harvests and Sowings which has been the most fertile, it seems to me, at the level of understanding of myself, by bringing me in contact with key questions and situations, and by making me realize just this "key" [fr: nevralgique] character, which until last year still remained elusive.
+It is however not the creativity and its sources that find themselves at the center of attention in this meditation "The Burial (2) &mdash; or the Key of Yin and Yang", but it is rather "the conflict", that state of blockage of the creativity, or the dispersion of the creative energy by the confrontation, in the phyche, of opposing forces (most often hidden). The aspects of _violence_, of violence that is (in appearance) "free-of-charge", "for its own sake", have disconcerted me more than once in the Burial, and made a resurgence in a multitude of similar experienced situations. The experience of this violence has been in my life like "hard-core, irreducible, of the experience of conflict". Never before have I confronted myself with the formidable mystery of the very existence and of the universality of this violence in human existence in general, and in mine in particular. It is this mystery which is at the center of attention, throughout the second half  (the side of "yin", or "decline") in the meditation on yin and yang. It is in the course of this part of the meditation that a deeper vision progressively emerged, of the meaning of the Burial, and of forces that it expresses. It is also that part of Harvests and Sowings which has been the most fertile, it seems to me, at the level of understanding of myself, by bringing me in contact with key questions and situations, and by making me realize just this "key" [fr: nevralgique] character, which until last year still remained elusive.
 
 Once at the end of this interminable "digression" on yin and yang, I was still left, more or less, with my "two or three notes" still to be written (plus yet one or two others, at the very most, of which one had already found its name "The four operations"...), before the end of Harvests and Sowings. We know what comes next: these "last few notes" ended up taking up the most of Harvests and Sowings, nearly five hundred pages. This is thus the "fourth wave" of the movement. It is also the third and last part of the Burial, and I have given it the name "The Four Operations", which is also that of the group of notes ("Les quatre opérations operations (sur une dépouille)") that make up the core of the fourth breath of the reflection. Here, in Harvests and Sowings, is the "investigative" part in the strictest sense of the word &mdash; with these two cents, however, that this investigation not limit itself to a purely "technical" aspect, in other words to the aspect of the "detective", but that the reflection here is driven first and foremost, like everywhere else in Harvests and Sowings, by the desire to know and to comprehend. The tone here is certainly more "muscular" than in the first part of the Burial, where I was still rubbing my eyes a little [...]! This doesn't prevent that the facts uncovered throughout the pages often came at the right time, to illustrate on the fly many things that were only lightly touched in passing here or there, without incarnating in precise and vivid examples. It is also in this part that the mathematical digressions take an important place, stimulated by a renewed contact (by the necessities of the investigation) with a substance that I had lost sight of for fifteen years. It was also, at the other end of the spectrum, the stories on the [...] of the misadventures of my friend Zoghman Mebkhout (to which this part is dedicated), in the hands of a high-calibre and unscrupulous "maffia", which he had not dreamed of when embarking on this subject (certainly enthralling, and anodyne in appearance) of the cohomology of varieties [...]. For a common thread [...]. [...]
 
@@ -26,6 +26,6 @@ This fourth breath stretched across more than four months on end, from mid-febru
 
 <sup>119</sup>(&ast;)
 
-<sup>120</sup>(&ast;&ast;) This "fidelity to my original nature" has in fact in no way been total. For a long time, it was limited to my mathematical work, while everywhere else and notably in my relations to others, I was following the general motion of valuing and giving primacy to traits in me perceived as "manly", and repressing traits that were "feminine". This is sufficiently detailed in the group of notes "Histoire d'une vie: un cycle en trois mouvements" ([n&deg; 107-110](../table-of-contents.md#histoire-vie)), which practically opens The Key of Ying and Yang.
+<sup>120</sup>(&ast;&ast;) This "fidelity to my original nature" has in fact in no way been total. For a long time, it was limited to my mathematical work, while everywhere else and notably in my relations to others, I was following the general motion of valuing and giving primacy to traits in me perceived as "manly", and repressing traits that were "feminine". This is sufficiently detailed in the group of notes "Histoire d'une vie: un cycle en trois mouvements" ([n&deg; 107-110](../table-of-contents.md#histoire-vie)), which practically opens The Key of Yin and Yang.
 
 <sup>121</sup>(&ast;)
